--- a/rebar.config
+++ b/rebar.config
@@ -10,6 +10,13 @@
      ]},
     {plugins, [
        {rebar3_codecov, {git, "https://github.com/esl/rebar3_codecov.git", {ref, "6bd31cc"}}}
+     ]},
+    {port_env,
+     [
+      {"CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC --coverage"},
+      {"LDFLAGS", "$LDFLAGS --coverage"},
+      {"LDLIBS", "$LDLIBS -lcrypto"},
+      {"DRV_LINK_TEMPLATE", "$DRV_LINK_TEMPLATE $LDLIBS"}
      ]}
    ]}
  ]
