--- a/rebar.config
+++ b/rebar.config
@@ -2,9 +2,8 @@
 
 {profiles, [
   {test, [
-    {erl_opts, [debug_info, {d, 'STATISTICS'}]},
+    {erl_opts, []},
     {deps, [
-      {statistics, {git, "https://github.com/NelsonVides/statistics.git", {branch, "master"}}},
       {base16, "1.0.0"},
       {proper, "1.3.0"}
      ]},
