--- a/rebar.config
+++ b/rebar.config
@@ -8,7 +8,7 @@
       {proper, "1.3.0"}
      ]},
     {plugins, [
-       {rebar3_codecov, {git, "https://github.com/esl/rebar3_codecov.git", {ref, "6bd31cc"}}}
+       {rebar3_codecov, "0.2.0"}
      ]},
     {port_env,
      [
