--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [
   deterministic
- ]}.
+]}.
 
 {deps, []}.
 
@@ -10,49 +10,51 @@
     {deps, [
       {base16, "2.0.1"},
       {proper, "1.4.0"}
-     ]},
+    ]},
     {plugins, [
-       {rebar3_codecov, "0.3.0"}
-     ]},
-    {port_env,
-     [
-      {"CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC --coverage"},
-      {"LDFLAGS", "$LDFLAGS --coverage"},
-      {"LDLIBS", "$LDLIBS -lcrypto"},
-      {"DRV_LINK_TEMPLATE", "$DRV_LINK_TEMPLATE $LDLIBS"}
-     ]}
-   ]}
- ]
+      {rebar3_codecov, "0.3.0"}]},
+      {port_env,
+        [
+          {"CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC -I/opt/homebrew/include -I/usr/local/include --coverage"},
+          {"LDLIBS", "$LDLIBS -lcrypto -L/opt/homebrew/lib/ -L/usr/local/lib --coverage"}
+        ]
+      }
+  ]}
+]
 }.
 
 {plugins, [pc, rebar3_hex]}.
 
-{artifacts, ["priv/fast_pbkdf2.so"]}.
+{port_env,
+  [
+    {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)", "CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC -I/opt/homebrew/include -I/usr/local/include "},
+    {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)", "LDLIBS", "$LDLIBS -lcrypto -L/opt/homebrew/lib/ -L/usr/local/lib"},
+    {"win32", "CFLAGS", "$CFLAGS /O2 /DNDEBUG /Wall"},
+    {"win32", "LDLIBS", "$LDLIBS libcrypto.lib"},
+    {"DRV_LINK_TEMPLATE", "$DRV_LINK_TEMPLATE $LDLIBS"}
+  ]
+}.
 
 {port_specs,
- [
+  [
     {
-        % Any arch
-        ".*",
-        % Create library
-        "priv/fast_pbkdf2.so",
-        % From files
-        ["c_src/*.c"],
-        % Using options
-        [ {env, [{"CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC"},
-                 {"LDLIBS", "$LDLIBS -lcrypto"},
-                 {"DRV_LINK_TEMPLATE", "$DRV_LINK_TEMPLATE $LDLIBS"}]}]
-     }
- ]}.
+      % Any arch
+      ".*",
+      % Create library
+      "priv/fast_pbkdf2.so",
+      % From files
+      ["c_src/*.c"]
+    }
+  ]}.
 
 {provider_hooks,
- [
+  [
     {post,
-     [
+      [
         {compile, {pc, compile}},
         {clean, {pc, clean}}
-     ]}
- ]}.
+      ]}
+  ]}.
 
 {cover_enabled, true}.
 {cover_export_enabled, true}.
