Remove extra includes from compile flags

--- a/rebar.config
+++ b/rebar.config
@@ -15,8 +15,8 @@
       {rebar3_codecov, "0.6.0"}]},
       {port_env,
         [
-          {"CFLAGS", "$CFLAGS -std=c99 -O0 -g -Wall -Wextra -fPIC -I/opt/homebrew/include -I/usr/local/include --coverage"},
-          {"LDLIBS", "$LDLIBS -lcrypto -L/opt/homebrew/lib/ -L/usr/local/lib --coverage"}
+          {"CFLAGS", "$CFLAGS -std=c99 -O0 -g -Wall -Wextra -fPIC --coverage"},
+          {"LDLIBS", "$LDLIBS -lcrypto --coverage"}
         ]
       }
   ]}
@@ -28,9 +28,9 @@
 {port_env,
   [
     {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-         "CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC -I/opt/homebrew/include -I/usr/local/include"},
+         "CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC"},
     {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-         "LDLIBS", "$LDLIBS -lcrypto -L/opt/homebrew/lib/ -L/usr/local/lib"},
+         "LDLIBS", "$LDLIBS -lcrypto"},
     {"win32", "CFLAGS", "$CFLAGS /O2 /DNDEBUG /Wall"},
     {"win32", "LDLIBS", "$LDLIBS libcrypto.lib"},
     {"DRV_LINK_TEMPLATE", "$DRV_LINK_TEMPLATE $LDLIBS"}
