--- a/rebar.config
+++ b/rebar.config
@@ -15,8 +15,12 @@
       {rebar3_codecov, "0.6.0"}]},
       {port_env,
         [
-          {"CFLAGS", "$CFLAGS -std=c99 -O0 -g -Wall -Wextra -fPIC --coverage"},
-          {"LDLIBS", "$LDLIBS -lcrypto --coverage"}
+          {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
+               "$CFLAGS -std=c99 -O0 -g -Wall -Wextra -fPIC --coverage"},
+          {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
+               "$LDLIBS -lcrypto --coverage"},
+          {"win32", "CFLAGS", "$CFLAGS /O0 /DNDEBUG /Wall"},
+          {"win32", "LDLIBS", "$LDLIBS libcrypto.lib"}
         ]
       }
   ]}
