Enable testing in windows
Co-authored-by: Ronny Berndt <ronny@apache.org>

--- a/rebar.config
+++ b/rebar.config
@@ -15,8 +15,10 @@
       {rebar3_codecov, "0.6.0"}]},
       {port_env,
         [
-          {"CFLAGS", "$CFLAGS -std=c99 -O0 -g -Wall -Wextra -fPIC --coverage"},
-          {"LDLIBS", "$LDLIBS -lcrypto --coverage"}
+          {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
+               "$CFLAGS -std=c99 -O0 -g -Wall -Wextra -fPIC --coverage"},
+          {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
+               "$LDLIBS -lcrypto --coverage"}
         ]
       }
   ]}
@@ -31,8 +33,8 @@
          "CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC"},
     {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
          "LDLIBS", "$LDLIBS -lcrypto"},
-    {"win32", "CFLAGS", "$CFLAGS /O2 /DNDEBUG /Wall"},
-    {"win32", "LDLIBS", "$LDLIBS libcrypto.lib"},
+    {"win32", "CFLAGS", "$CFLAGS /I${OPENSSL_INSTALL_DIR}/include /O2 /DNDEBUG /Wall"},
+    {"win32", "LDLIBS", "$LDLIBS /LIBPATH:${OPENSSL_INSTALL_DIR}/lib libcrypto.lib"},
     {"DRV_LINK_TEMPLATE", "$DRV_LINK_TEMPLATE $LDLIBS"}
   ]
 }.
