--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,10 @@ jobs:
         os: ['ubuntu-22.04']
         otp: ['26.1', '25.3', '24.3']
         rebar3: ['3.22.1']
+        include:
+          - otp: '26.1'
+            rebar3: '3.22.1'
+            os: 'windows-2022'
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@v3
@@ -22,6 +26,17 @@ jobs:
         with:
           otp-version: ${{matrix.otp}}
           rebar3-version: ${{matrix.rebar3}}
+
+      - name: Windows - Enable Developer Command Prompt
+        uses: ilammy/msvc-dev-cmd@v1.12.1
+        if: ${{ matrix.os == 'windows-2022' }}
+      - name: Windows - Install openssl
+        shell: pwsh
+        run: |
+          choco install openssl
+          echo "OPENSSL_INSTALL_DIR=""C:\Program Files\OpenSSL""" >> $env:GITHUB_ENV
+        if: ${{ matrix.os == 'windows-2022' }}
+
       - name: Restore _build
         uses: actions/cache@v3
         with:
@@ -32,14 +47,11 @@ jobs:
         with:
           path: ~/.cache/rebar3
           key: rebar3-cache-for-os-${{matrix.os}}-otp-${{matrix.otp}}-rebar3-${{matrix.rebar3}}-hash-${{hashFiles('rebar.lock')}}
-
       - run: rebar3 as test get-deps
       - run: rebar3 as test compile
       - run: rebar3 as test ct
-
       - run: rebar3 dialyzer
         if: ${{ matrix.otp == '26.1' && matrix.os == 'ubuntu-22.04' }}
-
       - name: Run coverage
         if: ${{ matrix.otp == '26.1' && matrix.os == 'ubuntu-22.04' }}
         run: |
