--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,7 @@
                "$CFLAGS -std=c99 -O0 -g -Wall -Wextra -fPIC --coverage"},
           {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
                "$LDLIBS -lcrypto --coverage"},
-          {"win32", "CFLAGS", "$CFLAGS /O0 /DNDEBUG /Wall"},
+          {"win32", "CFLAGS", "$CFLAGS /I${OPENSSL_INSTALL_DIR}/include /O2 /DNDEBUG /Wall"},
           {"win32", "LDLIBS", "$LDLIBS libcrypto.lib"}
         ]
       }
@@ -35,7 +35,7 @@
          "CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC"},
     {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
          "LDLIBS", "$LDLIBS -lcrypto"},
-    {"win32", "CFLAGS", "$CFLAGS /O2 /DNDEBUG /Wall"},
+    {"win32", "CFLAGS", "$CFLAGS /I${OPENSSL_INSTALL_DIR}/include /O2 /DNDEBUG /Wall"},
     {"win32", "LDLIBS", "$LDLIBS libcrypto.lib"},
     {"DRV_LINK_TEMPLATE", "$DRV_LINK_TEMPLATE $LDLIBS"}
   ]
