Prepare hex package with docs

--- a/rebar.config
+++ b/rebar.config
@@ -25,7 +25,7 @@
 ]
 }.
 
-{plugins, [pc, rebar3_hex]}.
+{plugins, [pc]}.
 
 {port_env,
   [
@@ -62,3 +62,14 @@
 
 {cover_enabled, true}.
 {cover_export_enabled, true}.
+
+{project_plugins, [
+    rebar3_hex,
+    rebar3_ex_doc
+]}.
+
+{hex, [{doc, ex_doc}]}.
+
+{ex_doc, [
+    {source_url, <<"https://github.com/esl/fast_pbkdf2">>}
+]}.
