--- a/rebar.config
+++ b/rebar.config
@@ -16,9 +16,9 @@
       {port_env,
         [
           {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-               "$CFLAGS -std=c99 -O0 -g -Wall -Wextra -fPIC --coverage"},
+               "CFLAGS", "$CFLAGS -std=c99 -O0 -g -Wall -Wextra -fPIC -I/opt/homebrew/include -I/usr/local/include --coverage"},
           {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-               "$LDLIBS -lcrypto --coverage"}
+               "LDLIBS", "$LDLIBS -lcrypto -L/opt/homebrew/lib/ -L/usr/local/lib --coverage"}
         ]
       }
   ]}
@@ -30,9 +30,9 @@
 {port_env,
   [
     {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-         "CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC"},
+         "CFLAGS", "$CFLAGS -std=c99 -O3 -g -Wall -Wextra -fPIC -I/opt/homebrew/include -I/usr/local/include"},
     {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-         "LDLIBS", "$LDLIBS -lcrypto"},
+         "LDLIBS", "$LDLIBS -lcrypto -L/opt/homebrew/lib/ -L/usr/local/lib"},
     {"win32", "CFLAGS", "$CFLAGS /I${OPENSSL_INSTALL_DIR}/include /O2 /DNDEBUG /Wall"},
     {"win32", "LDLIBS", "$LDLIBS /LIBPATH:${OPENSSL_INSTALL_DIR}/lib libcrypto.lib"},
     {"DRV_LINK_TEMPLATE", "$DRV_LINK_TEMPLATE $LDLIBS"}
