--- a/rebar.config
+++ b/rebar.config
@@ -11,8 +11,10 @@
       {base16, "2.0.1"},
       {proper, "1.4.0"}
     ]},
+    {cover_enabled, true},
+    {cover_export_enabled, true},
     {plugins, [
-      {rebar3_codecov, "0.6.0"}]},
+      {rebar3_codecov, "0.7.0"}]},
       {port_env,
         [
           {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
@@ -59,9 +61,6 @@
         {clean, {pc, clean}}
       ]}
   ]}.
-
-{cover_enabled, true}.
-{cover_export_enabled, true}.
 
 {project_plugins, [
     rebar3_hex,
