--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,17 +90,17 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   test-on-s390x:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
     - uses: actions/checkout@v4
     - name: Setup emulator
       run: |
-        sudo docker run --rm --privileged tonistiigi/binfmt:qemu-v6.2.0
+        sudo docker run --rm --privileged tonistiigi/binfmt:qemu-v9.2.0
     - name: Run build
-      uses: uraimo/run-on-arch-action@v2.7.2
+      uses: uraimo/run-on-arch-action@v2.8.1
       with:
         arch: s390x
-        distro: ubuntu22.04
+        distro: ubuntu_latest
         install: |
           apt-get update -y
           DEBIAN_FRONTEND=noninteractive apt-get install -y rebar3 gcc libssl-dev
