Update ex_doc configuration in the rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -67,8 +67,13 @@
     rebar3_ex_doc
 ]}.
 
-{hex, [{doc, ex_doc}]}.
-
+{hex, [
+    {doc, #{provider => ex_doc}}
+]}.
 {ex_doc, [
-    {source_url, <<"https://github.com/esl/fast_pbkdf2">>}
+     {source_url, <<"https://github.com/esl/fast_pbkdf2">>},
+     {main, <<"readme">>},
+     {extras, [{'README.md', #{title => <<"README">>}},
+               {'LICENSE', #{title => <<"License">>}}
+              ]}
 ]}.
